--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,5 +12,14 @@
 @import "components/NavBar";
 @import "components/NavItem";
 @import "components/SocialMedia";
+@import "components/GameList";
+@import "components/Item";
+@import "components/ItemDetail";
+@import "components/ItemDetailContainer";
+@import "components/ItemList";
+@import "components/NotFound";
+@import "components/SongDetail";
+@import "components/SongList";
+@import "components/GameItem";
 
 // utilities
