Ready to final project

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,5 +21,8 @@
 @import "components/SongDetail";
 @import "components/SongList";
 @import "components/GameItem";
+@import "components/ItemQuantitySelector";
+@import "components/Cart";
+@import "components/Checkout";
 
 // utilities
